# compilation_database

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  common.go  go.mod  go.sum  main.go  readme.md  v1.go  v2.go
.github/workflows/: build.yml
