load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "compile_commands_lib",
    srcs = ["main.go"],
    importpath = "github.com/0x1042/compilation_database",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "compile_commands",
    cgo = False,
    embed = [":compile_commands_lib"],
    gc_linkopts = [
        "-w",
        "-s",
    ],
    visibility = ["//visibility:public"],
)
